# yeller-scrapyard

./: .gitignore  Cargo.toml  LICENSE  README.md  input.txt  output  output.ll  output.s  readme.md  speech.py
error_examples/: extra_line.yl  invalid_assign_target.yl  lonely_variable.yl  long_func_name.yl  packed_function.yl  short_var_name.yl  tabbing.yl  var_already_declared.yl  var_not_declared.yl  wrong_fn_count.yl
src/: errors.rs  formatting.rs  ir.rs  lexer.rs  llvm_gen.rs  main.rs  parser.rs  semantic_analysis.rs
src/ir/: definition.rs
src/llvm_gen/: var_collecter.rs
src/parser/: nodes.rs
src/semantic_analysis/: typecheck.rs  variable_resolution.rs
